# 2d_solver

./: .gitignore
post/: plot.py
src/: CMakeLists.txt  allocate.cpp  allocate.h  grid.cpp  grid.h  main.cpp  main.cxx  readers.cpp  readers.h
src/grid/: CMakeLists.txt  grid.cpp  grid.h  metrics_fv.cpp  metrics_fv.h  metrics_gc.cpp  metrics_gc.h
src/io/: CMakeLists.txt  readers.cpp  readers.h  writers.cpp  writers.h
src/malloc/: CMakeLists.txt  allocate.cpp  allocate.h
src/norms/: CMakeLists.txt  error.cpp  error.h
src/parameters/: CMakeLists.txt  parameters.cpp  parameters.h
src/schemes/: CMakeLists.txt  schemes.cpp  schemes.h  solution.cpp  solution.h  vectors.cpp  vectors.h
